# EMGFlow

./: .gitignore  README.md  pyproject.toml
EMG_fidelity/: README.md  __init__.py  kid_metrics.py  metrics.py  models.py  robustmodel.py  train_classifier.py
EMG_fidelity/cross_models/: __init__.py  cross_encoder.py  cross_former.py
emgflow/config/: __init__.py  path.py
emgflow/datasets/: NinaproDB2.py  NinaproDB4.py  NinaproDB6.py  NinaproDB7.py
emgflow/datasets/utils/: split.py  transforms.py
emgflow/model/: DDPM.py  __init__.py  flow_matching.py
emgflow/model/gan/: __init__.py  common.py  pure_wgan_gp_1d.py
emgflow/model/utils/: common.py  factory.py  patchEMG_extract.py  scheduler.py
preprocessing/: DB7_README.md  README.md  download_db2.sh  download_db6.sh  process_db2.py  process_db4.py  process_db6.py  process_db7.py  read_db2.py  read_db4.py  read_db7.py  verify_db4.py  verify_db7.py  verivy_db2.py  verivy_db6.py
