[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emgflow"
version = "0.1.0"
description = "Core public release of EMGFlow models, dataset loaders, and fidelity evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops",
    "numpy",
    "PyWavelets",
    "scikit-learn",
    "scipy",
    "torch",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["emgflow*", "EMG_fidelity*"]
