[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emgflow-models"
version = "0.1.0"
description = "Model-only release of EMGFlow generative backbones for sEMG synthesis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["emgflow*"]
